# finance.danielmoessner.de

./: .editorconfig  .gitignore  Dockerfile  README.md  ansible.cfg  apache-default.conf  apache.conf  call-deploy.sh  cronjobsetup.txt  db.sqlite3  deploy.sh  docker-compose.yml  manage.py  package-lock.json  package.json  permissions.sh  precommit.sh  pull-db.sh  push-db.sh  pyproject.toml  requirements.txt  rollup.config.js  run.sh  script.py
.github/agents/: ansible-https-migrate-provision-deploy.agent.md
.github/workflows/: deploy.yml  deployment-stage.yml
ansible/: README.md  ansible.cfg  deploy.yml  migrate.yml  provision.yml
ansible/group_vars/: all.yml
ansible/inventory/migration/: hosts.ini
ansible/inventory/production/: hosts.ini
ansible/templates/: nginx-app-https.conf.j2
apps/alternative/: apps.py  forms.py  formviews.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
apps/alternative/migrations/: 0001_initial.py  0002_auto_20180828_1631.py  0003_auto_20180828_1656.py  0004_flow_value.py  0005_auto_20180831_1231.py  0006_auto_20180831_1339.py  0007_auto_20180831_1413.py  0008_auto_20180831_1442.py  0009_auto_20180831_1711.py  0010_auto_20180831_1739.py  0011_remove_timespan_period.py  0012_auto_20190106_2333.py  0013_remove_flow_value.py  0014_auto_20200316_1557.py  0015_stats.py  0016_auto_20200317_1200.py  0017_auto_20200317_1200.py  0018_auto_20200317_1201.py  (+20 more)
apps/banking/: admin.py  api.py  apps.py  dirty_forms.py  duplicated_code.py  forms.py  formviews.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/core/: duplicated_code.py  functional.py  mixins.py  models.py  return_calculation.py  selenium.py  tests.py  urls.py  utils.py  views.py
apps/crypto/: apps.py  forms.py  formviews.py  models.py  prices.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/overview/: builder.py  domain.py  forms.py  formviews.py  models.py  urls.py  views.py
apps/stocks/: admin.py  apps.py  forms.py  mixins.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/users/: forms.py  formviews.py  mixins.py  models.py  tests.py  urls.py  views.py
config/: context_processors.py  jinja2.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  staging.py
docs/: cronjobsetup.txt  howtodeploy.txt  howtossl.txt
finance/alternative/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py
finance/banking/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
finance/core/: apps.py  models.py  return_calculation.py  tests.py  urls.py  utils.py  views.py
finance/crypto/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
finance/files/: gulpfile.js  package-lock.json  package.json
finance/static/: gulpfile.js  package-lock.json
finance/templates/: alternative_alternative.njk  alternative_index.njk  banking_account.njk  banking_category.njk  banking_index.njk  core_index.njk  core_page.njk  core_termsofuse.njk  crypto_account.njk  crypto_asset.njk  crypto_index.njk  users_login.njk  users_settings.njk  users_signin.njk  users_signup.njk  zperformance.njk  zportfolio.njk
finance/users/: apps.py  forms.py  models.py  urls.py
mastercash/: .gitignore  package-lock.json  package.json  postcss.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
mastercash/app/: index.html
requirements/: base.txt  requirements.txt
static/: gulpfile.js  package-lock.json  package.json
static/javascript/: app.js  charts.js  hmf_script.js  index.js  lm_script.js
static/scss/: _base.scss  _bootstrap.scss  _components.scss  _compontents.scss  _modules.scss  _utils.scss  _vars.scss  main.scss
templates/: 400.html  403.html  404.html  500.html
templates/error_templates/: 400.html
templates/layout/: base.j2  base.njk  error.j2  lm.j2  lm.njk  m.j2  m.njk
templates/modules/: button.njk  delete_snippet.njk  form.njk  form_snippet.njk  header.njk  heading.njk  left.njk  messages.njk  modal.njk  stats.j2  table.njk
templates/symbols/: button.j2  button.njk  flows.j2  form.j2  form.njk  form_snippet.j2  form_snippet.njk  heading.njk  left.j2  left.njk  messages.j2  messages.njk  modal.j2  modal.njk  stats.j2  values.j2
(+600 files in other folders)
