[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["migrations", "__pypackages__", "venv"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
addopts = "--ignore=__pypackages__"

[tool.django-stubs]
django_settings_module = "config.settings.local"
ignore_missing_settings = true

[tool.isort]
known_local_folder = ["apps", "config"]
profile = "black"

[tool.ruff]
exclude = [
    "config/settings"
]

[project]
name = "finance.danielmoessner.de"
version = "0.0.0"
description = ""
authors = [
    {name = "danielmoessner", email = "github@danielmoessner.de"},
]
dependencies = [
    "beautifulsoup4==4.14.*",
    "django==5.2.*",
    "django-debug-toolbar==6.0.*",
    "Jinja2==3.1.*",
    "pandas==2.2.*",
    "pytz==2023.3.*",
    "requests==2.31.*",
    "pydantic==2.1.*",
    "selenium==4.37.*",
    "webdriver-manager==4.0.*",
    "isort==5.12.*",
    "black==24.2.*",
    "ruff==0.1.*",
    "mypy==1.10.*",
    "types-requests==2.31.*",
    "pytest==8.3.*",
    "pytest-django==4.9.*",
    "django-types==0.19.*",
    "numpy==2.1.*",
    "djlint==1.34.*",
]
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

[tool.setuptools]
packages = []
